# MultiModel

./: ModelParamsNode.py  README.md  WF_nodes.py  __init__.py  pyproject.toml
.github/workflows/: publish.yml
Styles/: basic.json  camera.yaml
js/: ModelParamsNode.js  ModelParamsNodeExt.js  MultiModelSwitch.js  active_model.js
